change index body h1

--- a/FinalProj/templates/index.html
+++ b/FinalProj/templates/index.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <h1>SQL Query Executor</h1>
+    <h1>SPARQL Query Executor</h1>
     <form id="query-form">
         <textarea id="sparql-query" placeholder="Enter your SPARQL query here..."></textarea><br>
         <button type="submit">Execute Query</button>
